needs update functionallity

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,13 @@
 
 <body class="page">
     <div id="content">
-        
+
     </div>
+    <a href="/admin.html">
+        <button id="create-card">
+            Create Card
+        </button>
+    </a>
 </body>
 
 
@@ -29,4 +34,6 @@
 <script src="generate-card-html.js"></script>
 <script src="final-frontier.js"></script>
 <script src="main.js"></script>
+
+
 </html>
